--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,45 @@
-# Logs
-logs
-*.log
+# Node.js
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+package-lock.json
+.env
+.env.*   # any .env variant like .env.local, .env.production, etc.
 
-node_modules
-dist
-dist-ssr
-*.local
+# macOS
+.DS_Store
+
+# Logs
+logs/
+*.log
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
+.vscode/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+
+# Build files
+/dist
+/build
+*.tsbuildinfo
+
+# React
+*.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Coverage directory used by testing tools
+coverage/
+
+# Optional: if you use Linux or macOS binaries
+*.out
+
+# Optional: specific for render.com or similar hosting platforms
+/render-build/
