--- a/expanse-fe/package.json
+++ b/expanse-fe/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
