--- a/expanse-be/package.json
+++ b/expanse-be/package.json
@@ -10,10 +10,12 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
-    "mongoose": "^8.9.7",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.4",
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
